# hangar_back

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml  env  sonar-project.properties
.github/workflows/: cicd-pipeline.yml
base_image/config/: default.conf.template  nginx.conf
src/: config.rs  error.rs  lib.rs  main.rs  middleware.rs  router.rs  state.rs
src/handlers/: auth_handler.rs  health.rs  mod.rs  project_handler.rs  sse_handler.rs
src/model/: project.rs
src/services/: crypto_service.rs  database_service.rs  deployment_orchestrator.rs  docker_service.rs  github_service.rs  mod.rs  project_service.rs  validation_service.rs
src/sse/: emitter.rs  manager.rs  mod.rs  tasks.rs  types.rs
