[package]
name = "hangar_back"
version = "0.1.0"
edition = "2024"


[dependencies]
# Le framework web principal
axum = "0.8"
axum-extra = { version = "0.12", features = ["cookie"] }

# Le runtime asynchrone
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "fs", "process"] }
futures = "0.3"

# La tour de services et ses middlewares HTTP
tower = { version = "0.5", features = ["full"] }
tower-http = { version = "0.6", features = ["trace", "cors", "compression-gzip", "timeout"] }

jsonwebtoken = { version = "10.2", features = ["rust_crypto"] }

base64 = "0.22"

aes-gcm = "0.10"
rand = "0.9"

# Logging structuré
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Sérialisation / Désérialisation
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Gestion des erreurs
thiserror = "2.0"

# Chargement des variables d'environnement depuis un fichier .env
dotenvy = "0.15"

# Client HTTP pour les appels externes
reqwest = { version = "0.12", features = ["json"] }

quick-xml = { version = "0.38", features = ["serialize"] }
time = { version = "0.3", features = ["serde"] }

bollard = "0.19"

tempfile = "3.10"
tar = "0.4"
flate2 = { version = "1.1", features = ["zlib"], default-features = false }

sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "mysql", "time", "json"] }

git2 = "0.20"

[lints.clippy]
too_many_arguments = "allow"